# Changelog
# $Id$
mm-dd-yy - Version 6.0.5

  - Extended X DevAPI with flexible parameter lists.
  
  - Added a virtual NodeSession to X DevAPI. 

09-05-16 - Version 6.0.4

  - X DevAPI URL prefix changed from "mysql:x:" to "mysqlx:".

  - Fix for Bug#24301468 X DEVAPI SSL CONNECTION FAILS ON WINDOWS

  - The X DevAPI Table object now represents both database tables and views.

  - Added support for matching against pattern for X DevAPI list_objects calls.
    Added Schema.getCollections(String pattern) and Schema.getTables(String pattern) interface methods.

  - Switched to "mysqlx" namespace for X DevAPI StmtExecute messages. This change is incompatible to MySQL server versions < 5.7.14.

  - Fix for Bug#82046 (23743947), MYSQL CONNECTOR JAVA OSGI METADATA BROKEN.

  - Fix for Bug#21690043, CONNECT FAILS WHEN PASSWORD IS BLANK.

  - Fix for Bug#22931433, GETTING VALUE OF BIT COLUMN RESULTS IN EXCEPTION.

06-17-16 - Version 6.0.3

  - Fix for Bug#23535571, EXCESSIVE MEMORY USAGE WHEN ENABLEPACKETDEBUG=TRUE.

  - Fix for Bug#23212347, ALL API CALLS ON RESULTSET METADATA RESULTS IN NPE WHEN USESERVERPREPSTMTS=TRUE.

  - Fix for Bug#23201930, CLIENT HANG WHEN RSLT CUNCURRENCY=CONCUR_UPDATABLE AND RSLTSET TYPE=FORWARD_ONLY.

  - Fix for Bug#23188498, CLIENT HANG WHILE USING SERVERPREPSTMT WHEN PROFILESQL=TRUE AND USEIS=TRUE.

  - Fix for Bug#22678872, NPE DURING UPDATE WITH FABRIC.
    New property 'loadBalanceHostRemovalGracePeriod' sets the grace period when removing hosts from a load-balanced connection.

  - Fix for Bug#71131 (18068303), Poor error message in CallableStatement.java.

  - Fix for Bug#59462 (16736619), ConcurrentModificationException inside ConnectionImpl.closeAllOpenStatements().

  - Fix for Bug#22848249, LOADBALANCECONNECTIONGROUPMANAGER.REMOVEHOST() NOT WORKING AS EXPECTED.

  - Fix for Bug#22730682, ARRAYINDEXOUTOFBOUNDSEXCEPTION FROM CONNECTIONGROUPMANAGER.REMOVEHOST().
